[tool.poetry]
name = "yolov2-pytorch"
version = "0.1.0"
description = ""
authors = ["thawro <tomaszhawro.kontakt@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
torch = { version = "2.0.1+cu117", source = "torchcu117" }
plotly = "^5.14.0"
pre-commit = "^3.2.2"
black = "^23.3.0"
isort = "^5.12.0"
ipykernel = "^6.22.0"
torchinfo = "^1.7.2"
torchvision = "^0.15.2"
rich = "^13.3.5"
matplotlib = "^3.7.1"
ipywidgets = "^8.0.6"
colorlog = "^6.7.0"
albumentations = "^1.3.1"
onnx = "1.13.1"
colored = "^1.4.4"
torchmetrics = "^1.0.0"
gputil = "^1.4.0"
mlflow = "^2.5.0"
tqdm = "^4.65.0"
opencv-python = "4.8.0.74"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "torchcu117"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"
